# POC-App

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/workflows/: build.yaml  ci.yaml  docs.yaml  mirror.yaml  require-dev.yaml  unit-tests.yaml
cmake/: README.md
code-generated/: main.cpp
docs/: Doxyfile  README.md  docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
docs/docs/about/: intro.md
docs/docs/dev/: cmake-tool.md  codegen-algorithm.md  intro.md  nebula-format.md
docs/docs/user/: intro.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/: codegen_demo.cpp
previews/pr-10/: 404.html  index.html  sitemap.xml
previews/pr-10/api/: annotated.html  annotated_dup.js  classcode__generation_1_1CodeGenerationError__coll__graph.md5  classcode__generation_1_1IndentationError-members.html  classcode__generation_1_1IndentationError.html  classcode__generation_1_1IndentationError__coll__graph.md5  classcore_1_1CoreException__inherit__graph.map  classcore_1_1CoreException__inherit__graph.md5  classcore_1_1EmptyGraphException.html  classcore_1_1EmptyGraphException__coll__graph.md5  classcore_1_1FunctionInputNode-members.html  classcore_1_1FunctionInputNode.html  classcore_1_1FunctionInputNode.js  classcore_1_1FunctionNode-members.html  classcore_1_1FunctionNode.html  classcore_1_1FunctionNode.js  classcore_1_1FunctionOutputNode-members.html  classcore_1_1FunctionOutputNode.html  classcore_1_1FunctionOutputNode__coll__graph.md5  classcore_1_1Graph.html  classcore_1_1Graph.js  classcore_1_1LiteralNode.html  classcore_1_1NodeBase-members.html  classcore_1_1NodeBase.html  classcore_1_1NodeBase.js  classcore_1_1NodeBase__inherit__graph.map  classcore_1_1NodeBase__inherit__graph.md5  classcore_1_1NodeNotFoundException__inherit__graph.md5  classcore_1_1OperatorNode-members.html  classcore_1_1OperatorNode.html  classcore_1_1SerializationException__coll__graph.map  classcore_1_1VariableNode-members.html  classcore_1_1VariableNode.html  classes.html  classutils_1_1BaseException__coll__graph.map  classutils_1_1IdManager.html  classutils_1_1Logger.html  connection__exceptions_8hpp_source.html  dir_089689f1a5cf6c0070f026db4ec3e39b.js  dir_089689f1a5cf6c0070f026db4ec3e39b_dep.md5  (+31 more)
previews/pr-12/: 404.html  index.html  sitemap.xml
previews/pr-12/api/: annotated_dup.js  classcore_1_1ConnectionException__inherit__graph.map  classcore_1_1FunctionInputNode.html  (+27 more)
previews/pr-15/: 404.html  index.html  sitemap.xml
previews/pr-16/: 404.html  index.html  sitemap.xml
previews/pr-17/: 404.html  index.html  sitemap.xml
previews/pr-18/: 404.html  index.html  sitemap.xml
previews/pr-19/: 404.html  index.html  sitemap.xml
previews/pr-20/: 404.html  index.html  sitemap.xml
previews/pr-21/: 404.html  index.html  sitemap.xml
previews/pr-22/: 404.html  index.html  sitemap.xml
scripts/: check_style.sh
scripts/linux/: build.sh  check_style.sh  configure.sh  dev.sh  format.sh  lint.sh  setup-env.sh  setup.sh  test.sh
scripts/windows/: build.bat  check_style.bat  configure.bat  dev.bat  format.bat  lint.bat  run.bat  run_test.bat  setup-env.bat  test.bat
src/: CMakeLists.txt
src/cmake-tool/: CMakeLists.txt  README.md  cmake_compiler.cpp  cmake_compiler.hpp
src/core/: CMakeLists.txt  README.md  connection_exceptions.cpp  connection_exceptions.hpp  connection_exceptions.tcc  core-errors.hpp  core_exception.cpp  core_exception.hpp  core_exception.tcc  core_exceptions.cpp  core_exceptions.hpp  core_exceptions.tcc  function_node_exceptions.hpp  graph.cpp  graph.hpp  graph.tcc  graph_exceptions.cpp  graph_exceptions.hpp  graph_exceptions.tcc  graph_validator.cpp  graph_validator.hpp  node_base.cpp  node_base.hpp  serialization_exceptions.cpp  serialization_exceptions.hpp  serialization_exceptions.tcc  topological_sorter.cpp  topological_sorter.hpp
src/core/nodes/: condition_node.cpp  condition_node.hpp  for_node.cpp  for_node.hpp  function_input_node.cpp  function_input_node.hpp  function_node.cpp  function_node.hpp  function_node_errors.hpp  function_node_exceptions.cpp  function_node_exceptions.hpp  function_node_exceptions.tcc  function_output_node.cpp  function_output_node.hpp  literal_node.cpp  literal_node.hpp  loop_node.cpp  loop_node.hpp  operator_node.cpp  operator_node.hpp  print_node.cpp  print_node.hpp  printf_node.cpp  printf_node.hpp  variable_node.cpp  variable_node.hpp
src/editor/: CMakeLists.txt  README.md  main.cpp
src/editor/code-generation/: code-generator-errors.hpp  code-generator-file-formatting.cpp  code-generator-file.cpp  code-generator-file.hpp  codegen-context.cpp  codegen-context.hpp  codegen-optimizer.cpp  codegen-optimizer.hpp
src/editor/errors/: editor-errors.hpp
src/editor/file-writing/: file-writer.cpp  file-writer.hpp
src/graph-builder/: CMakeLists.txt  README.md
src/graph-exporter/: CMakeLists.txt  README.md  graph-exporter.cpp  graph-exporter.hpp  graph_exporter.cpp  graph_exporter.hpp
src/graph-exporter/code-generation/: code-generator-file-formatting.cpp
src/graph-exporter/parse-node/: parse-node-literal.cpp  parse-node-printf.cpp  parse-node-variable.cpp
src/utils/: CMakeLists.txt  README.md  exception_base.cpp  exception_base.hpp  exception_base.tcc  id_manager.cpp  id_manager.hpp  id_manager.tcc  logger.cpp  logger.hpp  logger.tcc  raylib_wrapper.cpp  raylib_wrapper.hpp  string-splitter.cpp  string-splitter.hpp
tests/: CMakeLists.txt  code_generator_file_test.cpp  file_writer_test.cpp  main_test.cpp
tests/cmake-tool/: CMakeLists.txt  cmake_compiler_tests.cpp
tests/core/: codegen_optimizer_test.cpp  codegen_test.cpp  condition_loop_test.cpp  condition_node_tests.cpp  edge_storage_test.cpp  for_loop_test.cpp  function_input_node_test.cpp  function_node_test.cpp  function_output_node_test.cpp  graph_basic_test.cpp  graph_exporter_test.cpp  graph_tests.cpp  graph_validator_test.cpp  operator_node_tests.cpp  print_node_test.cpp  topological_sorter_test.cpp
(+956 files in other folders)
